# CLI_entry

./: .gitignore  README.md  main.py  pyproject.toml
mytool/: __init__.py  __main__.py  cli.py  core.py
scripts/: run.py
